external-access/dev/monitoring/alertmanager/ingressroute-patch-alertmanager.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  routes:
    - match: Host(`alertmanager.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: alertmanager-louketo-proxy
          port: 3000
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
spec:
  routes:
    - match: Host(`alertmanager.192.168.0.15.xip.io`)
      kind: Rule
      services:
        - name: alertmanager-louketo-proxy
          port: 3000
